[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/final_dialog.gd" type="Script" id=1]
[ext_resource path="res://assets/dialogo_final.png" type="Texture" id=2]
[ext_resource path="res://resources/shader.tres" type="Material" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 550, 500 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 500, 550, 500 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1000, 550, 500 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1500, 550, 500 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=6]
resource_name = "fadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../shader:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "fadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="final_dialog" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 300, 250 )
scale = Vector2( 1.1, 1 )
frames = SubResource( 5 )
frame = 3
playing = true

[node name="ColorRect3" type="ColorRect" parent="."]
margin_right = 600.0
margin_bottom = 104.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 608.0
margin_bottom = 504.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
anims/fadeIn = SubResource( 6 )

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
margin_right = 600.0
margin_bottom = 496.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="ColorRect2"]
anims/RESET = SubResource( 10 )
anims/fadeOut = SubResource( 7 )

[node name="shader" type="Sprite" parent="."]
material = ExtResource( 3 )
position = Vector2( 300, 252 )
scale = Vector2( 9.375, 7.875 )
z_index = 2
texture = ExtResource( 4 )

[connection signal="animation_finished" from="ColorRect/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="ColorRect2/AnimationPlayer2" to="." method="_on_AnimationPlayer2_animation_finished"]
